--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <div class="container">
         <p>Enter your text or URL</p>
         <input type="text" name="text" id="text">
-        <button>Generate QR Code</button>
+        <span id="error">The input box is require !</span>
+        <div id="imgBox">
+            <img src="" id="qrImage" alt="QR Code Image">
+        </div>
+        <button onclick="generateQR()">Generate QR Code</button>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
